# zns-mint

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  orchestrator-phases.md
auth/: Cargo.toml
auth/src/: challenge.rs  error.rs  lib.rs
chain/: Cargo.toml
chain/src/: grpc.rs  lib.rs  scanner.rs  treasury.rs  wallet_sync.rs
chain/src/name_note/: commit.rs  decrypt.rs  hash.rs  mod.rs  tests.rs  verify.rs
core/: Cargo.toml  README.md
core/src/: action.rs  db.rs  error.rs  lib.rs  memo.rs  network.rs  store.rs
docs/: custody-check.md  protocol.md
host/: Cargo.toml
host/src/: lib.rs  scanner.rs
mint/: Cargo.toml
mint/src/: boot.rs  config.rs  consensus.rs  constants.rs  error.rs  lib.rs  processor.rs  record.rs  registry.rs  reorg.rs  rpc.rs  scan.rs  spend.rs  status.rs  store.rs  sweep.rs  types.rs
mint/tests/: spend_lane.rs
signer/: Cargo.toml
signer/src/: derive.rs  error.rs  lib.rs  mint.rs  policy.rs  sign.rs  verify.rs
state/: Cargo.toml
state/src/: actions.rs  block_cache.rs  db.rs  error.rs  lib.rs  orchestrator.rs  treasury.rs  treasury_sync.rs
tools/: Cargo.toml
tools/src/: main.rs
zns-mint/: AGENTS.md  Cargo.toml  main.changelog.md
zns-mint/docs/protocol/: 00-overview.md  01-trust-model.md  02-accounts-and-keys.md  03-name-note.md  04-memo-grammar.md  05-lifecycle.md  06-authorization.md  07-mint-run-loop.md  08-chain-sync.md  09-transaction-assembly.md  10-resolution-and-verification.md  11-open-questions.md  12-programming-model.md  13-implementation-slices.md  14-wallet-design.md  15-treasury-module.md  README.md
zns-mint/src/: auth.rs  auth.rs.changelog.md  boot.rs  boot.rs.context.md  key.rs  key.rs.changelog.md  key.rs.context.md  lib.rs  main.changelog.md  main.rs  main.rs.context.md  metrics.rs  metrics.rs.changelog.md  metrics.rs.context.md  mint.rs  registry.rs  scanner.rs  treasury.rs  wallet.rs  zcash.rs
zns-mint/src/scanner/: reorg.rs  scan.rs
zns-mint/src/treasury/: fee.rs  memo.rs  note.rs  sweep.rs
zns-mint/src/wallet/: selection.rs
zns-mint/src/zcash/: chain.rs  mempool.rs  zebra.rs
zns-mint/test_vectors/: .gitkeep
