[package]
name = "zns-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"] }
uuid = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
