[package]
name = "zns-chain"
description = "ZNS chain I/O: lightwalletd compact-block intake scan and zebrad gRPC broadcast."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
zns-core = { workspace = true }
# orchard types in the scanned-note API; trial-decryption drives intake. The
# registry is Orchard-only, so the scanner takes a bare FVK.
orchard = { workspace = true, features = ["unsafe-zns"] }
zcash_primitives = { workspace = true }
zcash_protocol = { workspace = true }
# lightwalletd gRPC transport: zcash_client_backend supplies the proto client +
# message types; tonic supplies the Channel. zcash_note_encryption drives
# Orchard trial-decryption.
zcash_client_backend = { workspace = true }
zcash_note_encryption = { workspace = true }
tonic = { workspace = true, features = ["transport", "tls-ring", "tls-webpki-roots"] }
# names tonic's `Channel::from_shared` error type for `GrpcError`
http = { workspace = true }
# decode lightwalletd's hex-encoded commitment tree (GetTreeState → anchor)
hex = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
