[package]
name = "zns-chain"
description = "ZNS chain I/O: lightwalletd compact-block intake scan and full node gRPC broadcast."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
zns-core = { workspace = true }
# orchard types in the scanned-note API: IncomingViewingKey drives trial
# decryption of incoming request notes (standard ZIP-212, no unsafe-zns needed
# — that's only for the Name Notes the registry itself mints).
orchard = { workspace = true }
zcash_primitives = { workspace = true }
zcash_protocol = { workspace = true }
# lightwalletd gRPC transport: zcash_client_backend supplies the proto client +
# message types; tonic supplies the Channel. zcash_note_encryption drives
# Orchard trial-decryption.
zcash_client_backend = { workspace = true }
zcash_note_encryption = { workspace = true }
sapling = { workspace = true }
tonic = { workspace = true, features = ["transport", "tls-ring", "tls-webpki-roots"] }
# names tonic's `Channel::from_shared` error type for `GrpcError`
http = { workspace = true }
# decode lightwalletd's hex-encoded commitment tree (GetTreeState → anchor)
hex = { workspace = true }
thiserror = { workspace = true }
# for EphemeralCompactBlockCache (the BlockCache/BlockSource contract used by
# zcash_client_backend::sync::run when the orchestrator drives treasury sync)
async-trait = { workspace = true }

[lints]
workspace = true
