[package]
name = "zns-chain"
description = "ZNS chain I/O: lightwalletd compact-block intake scan and full node gRPC broadcast."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
zns-core = { workspace = true }
# Orchard trial decryption: standard ZIP-212 for request notes, relaxed path
# (see `name_note`) for registry-authored Name Notes with deterministic (ψ, rcm).
orchard = { workspace = true, features = ["unsafe-zns"] }
# Relaxed decrypt cipher primitives — pinned to zcash_note_encryption 0.4's versions.
chacha20 = "0.9"
chacha20poly1305 = "0.10"
# Sinsemilla note-commitment recompute for Name Note binding verification.
sinsemilla = "0.1"
bitvec = { version = "1", default-features = false }
group = "0.13"
pasta_curves = { workspace = true }
blake2b_simd = { workspace = true }
zcash_primitives = { workspace = true }
zcash_protocol = { workspace = true }
# lightwalletd gRPC transport: zcash_client_backend supplies the proto client +
# message types; tonic supplies the Channel. zcash_note_encryption drives
# Orchard trial-decryption.
zcash_client_backend = { workspace = true }
zcash_note_encryption = { workspace = true }
sapling = { workspace = true }
tonic = { workspace = true, features = ["transport", "tls-ring", "tls-webpki-roots"] }
# names tonic's `Channel::from_shared` error type for `GrpcError`
http = { workspace = true }
# decode lightwalletd's hex-encoded commitment tree (GetTreeState → anchor)
hex = { workspace = true }
thiserror = { workspace = true }
# for EphemeralCompactBlockCache (the BlockCache/BlockSource contract used by
# zcash_client_backend::sync::run when the orchestrator drives treasury sync with
# the passive NoteState / WalletDb seam)
async-trait = { workspace = true }

[lints]
workspace = true