[package]
name = "zns-core"
description = "Shared ZNS types: action, memo parsing, registry error — no crypto, no I/O."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
# ZcashNetwork (Main/Test/Regtest) implements consensus::Parameters. Light —
# no orchard/halo2, so core stays out of the proving stack.
zcash_protocol = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
