[package]
name = "zns-core"
description = "Shared ZNS types: action, memo parsing, registry error — no crypto, no I/O."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
