[package]
name = "zns-mint"
description = "ZNS minting daemon (zns-mint binary) + registry orchestration library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
name = "zns_registry"
path = "src/lib.rs"

[[bin]]
name = "zns-mint"
path = "src/bin/zns-mint.rs"

[features]
# Build against Zcash testnet instead of mainnet. A build-time choice so the
# active network is part of the binary's measurement, not runtime-switchable.
testnet = []

[dependencies]
zns-core = { workspace = true }
zns-state = { workspace = true }
zns-chain = { workspace = true }
zns-signer = { workspace = true }
zns-auth = { workspace = true }
# orchard types appear in MintContext's public API; circuit arrives transitively
# via zns-signer (the cryptographic mint core).
orchard = { workspace = true, features = ["unsafe-zns"] }
zcash_protocol = { workspace = true }
# Parse a name owner's Unified Address → Orchard receiver for the OTP relay.
zcash_keys = { workspace = true }
zcash_address = { workspace = true }
zcash_client_backend = { workspace = true }
# Registry holds the SQLite connection directly and calls zns-state's helpers.
rusqlite = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "signal"] }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# The daemon derives the registry Orchard key from a configured zip32 seed.
zip32 = { workspace = true }
hex = { workspace = true }
pasta_curves = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonrpsee = { workspace = true }

[lints]
workspace = true
