[package]
name = "zns-state"
description = "ZNS registry persistence: live `names` (current tip) + `name_events` history, plus ancillary tables (challenges, intents, processed). Split design for O(1) live lookup + full audit/reorg history."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
zns-core = { workspace = true }
zns-auth = { workspace = true }   # PendingChallenge (persisted here)
# treasury is a proper library-backed light client wallet (WalletDb data + BlockDb cache)
# for the registry's own spendable notes ("treasury float") used to self-fund mint fees.
# The Treasury object owns the dbs and drives sync (clean async sync method).
# Follows librustzcash higher-level ownership rather than passive raw DB + external mut seam.
rusqlite = { workspace = true }
thiserror = { workspace = true }
orchard = { workspace = true, features = ["unsafe-zns"] }
zcash_protocol = { workspace = true }
zcash_client_backend = { workspace = true }
zcash_client_sqlite = { workspace = true }
zcash_keys = { workspace = true }
# For the concrete client type in the proper owned sync API (CompactTxStreamerClient<Channel>)
tonic = { version = "0.14", features = ["transport"] }
bytes = "1"
zcash_address = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
# orchard shard-store error type for TreasuryError's shardtree variant
shardtree = { workspace = true }
incrementalmerkletree = { workspace = true }

[lints]
workspace = true
