[package]
name = "zns-state"
description = "ZNS registry persistence: live `names` (current tip) + `name_events` history, plus ancillary tables (challenges, intents, processed). Split design for O(1) live lookup + full audit/reorg history."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
zns-core = { workspace = true }
zns-auth = { workspace = true }   # PendingChallenge (persisted here)
# treasury is a library-backed light client wallet (WalletDb with Orchard shardtree)
# for the registry's own spendable notes ("treasury float") used to self-fund mint fees.
# The Treasury/NoteState object owns the WalletDb and exposes a passive seam
# (wallet_db_mut) + select_funding. The orchestrator drives sync with an ephemeral
# cache (see chain::wallet_sync::EphemeralCompactBlockCache).
rusqlite = { workspace = true }
thiserror = { workspace = true }
orchard = { workspace = true, features = ["unsafe-zns"] }
zcash_protocol = { workspace = true }
zcash_client_backend = { workspace = true }
zcash_client_sqlite = { workspace = true }
zcash_keys = { workspace = true }
# For the concrete client type in the proper owned sync API (CompactTxStreamerClient<Channel>)
tonic = { version = "0.14", features = ["transport"] }
bytes = "1"
zcash_address = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
prost = { workspace = true }
# orchard shard-store error type for TreasuryError's shardtree variant
shardtree = { workspace = true }
incrementalmerkletree = { workspace = true }

[lints]
workspace = true
