[package]
name = "zns-tools"
description = "ZNS developer tools — key generation, multisig demos, regtest helpers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "zns-tools"
path = "src/main.rs"

[dependencies]
# secp256k1 key generation + ECDSA signing
secp256k1 = { version = "0.29", features = ["std"] }

# P2SH redeem-script construction
zcash_script = "0.4"

# Transparent-input transaction building (P2SH spend, apply_signatures)
zcash_transparent = { version = "0.8", features = ["transparent-inputs"] }

# Full v5 transaction wrapping + sighash helpers (transparent-inputs gates from_parts)
zcash_primitives = { workspace = true, features = ["transparent-inputs"] }

# Address encoding (ZcashAddress::from_transparent_p2sh/p2pkh)
zcash_address  = { workspace = true }
zcash_protocol = { workspace = true }

# Random key material, base58check, hex, hashing
rand         = { workspace = true }
sha2         = "0.10"
bs58         = "0.5"
hex          = { workspace = true }
blake2b_simd = { workspace = true }
anyhow       = { workspace = true }

[lints]
workspace = true
