[package]
name = "zns-mint"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false

[[bin]]
name = "zns-mint"
path = "src/main.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
zeroize = { version = "1.7", features = ["zeroize_derive"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
hkdf = "0.12"
sha2 = "0.10"
thiserror = "1"

zebra-indexer-proto = "2.3"

# Key derivation (ZIP-32 Orchard)
zcash_keys = { version = "0.14", default-features = false, features = ["orchard"] }
zcash_protocol = { version = "0.9", default-features = false }